--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <input type="text" placeholder="Enter a City" spellcheck="false">
             <button><img src="images/search.png" ></button>
         </div>
+        <div class="error">
+            <p>Invalid city name</p>
+        </div>
         <div class="weather">
             <img src="images/rain.png" class = "weather-icon">
             <h1 class = "temp">22°C</h1>
@@ -34,5 +37,7 @@
             </div>
         </div>
     </div>
+    <script src="config.js"></script>
+    <script src = "script.js"></script>
 </body>
 </html>
