--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="col">
                     <img src="images/humidity.png">
                     <div>
-                        <p class = "humdidity">50%</p>
+                        <p class = "humidity">50%</p>
                         <p>Humdidty</p>
                     </div>
                 </div>
@@ -31,13 +31,12 @@
                     <img src="images/wind.png">
                     <div>
                         <p class="wind">15 km/h</p>
-                        <p>Wind Speed</p> 
+                        <p calss="speed">Wind Speed</p> 
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="config.js"></script>
     <script src = "script.js"></script>
 </body>
 </html>
